// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default Application Manager Search Applications Will filter results to show only active apps 1`] = `
[
  {
    "active": true,
    "created": 2019-06-29T11:20:50.501Z,
    "description": "Praesentium atque aliquam quas. Aliquam non enim temporibus distinctio aspernatur.",
    "id": "dbae82a8-3040-413e-8588-e0cb3ccc435c",
    "name": "back-end models #6381",
    "token": "ue4u82iklbhgi3mz7na4xnh8",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": true,
    "created": 2019-09-07T22:22:18.227Z,
    "description": "Occaecati itaque qui in incidunt aspernatur consequuntur maiores. Ipsam mollitia consequuntur nemo.",
    "id": "8a14ae68-aaab-4cc1-acdb-8eaee0e7cff1",
    "name": "bleeding-edge convergence #8595",
    "token": "oqnjwbybdrks0fbz2znximf0",
    "user": "75dbdbb1-1c01-4a7b-9eed-b26a98f2fefd",
  },
  {
    "active": true,
    "created": 2020-06-26T05:08:50.608Z,
    "description": "Accusantium doloribus esse accusantium expedita hic amet perspiciatis. Et nesciunt inventore.",
    "id": "ff083560-2f0b-4082-9d8c-8854ce927900",
    "name": "compelling channels #6717",
    "token": "z9i21i4av80ocudakqb2lsmz",
    "user": "a24f21d0-df03-45ce-bca4-8806aa97b298",
  },
  {
    "active": true,
    "created": 2021-10-16T04:56:04.184Z,
    "description": "Dolorum provident iste suscipit magnam ipsum quam dolore quod consequatur. Fuga aliquid saepe.",
    "id": "1f7d9034-139d-4c6c-a5d9-0243fcbf5c81",
    "name": "compelling networks #7601",
    "token": "4hhah20ocso9gdts5qupv3du",
    "user": "75dbdbb1-1c01-4a7b-9eed-b26a98f2fefd",
  },
  {
    "active": true,
    "created": 2019-06-29T06:08:13.201Z,
    "description": "Neque nemo sed. Nostrum pariatur natus quis ut minus quod numquam voluptate voluptatibus.",
    "id": "4962140d-0c84-4aaa-a296-e184ed142cba",
    "name": "cutting-edge methodologies #5209",
    "token": "20nc9k0zh7j6b0n22shurnvt",
    "user": "75dbdbb1-1c01-4a7b-9eed-b26a98f2fefd",
  },
  {
    "active": true,
    "created": 2020-10-17T09:28:52.339Z,
    "description": "Illo placeat cum. Harum voluptates incidunt veritatis maxime labore in temporibus.",
    "id": "20fb2c19-e253-4ee0-8698-a117e9a00add",
    "name": "frictionless blockchains #2140",
    "token": "33pro5o4xc6g1f6gx0qp1jl2",
    "user": "a24f21d0-df03-45ce-bca4-8806aa97b298",
  },
  {
    "active": true,
    "created": 2022-04-09T22:53:42.863Z,
    "description": "Voluptatum corporis totam quos ipsum ducimus eligendi consequuntur facilis. Eius rem similique nihil corrupti.",
    "id": "ea17f836-1211-4e8e-b625-2c95771cf60a",
    "name": "frictionless metrics #3423",
    "token": "ijcuucb7a7k06c7onvvu9dt2",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": true,
    "created": 2019-05-01T13:33:18.142Z,
    "description": "Consequatur sed optio id fugit odio omnis vel. Sed dolor ad.",
    "id": "0cde3c32-637b-45c6-a5de-753f6edaa6a7",
    "name": "front-end e-services #6105",
    "token": "zmsceb13fkfxx7cr0k6yqkme",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": true,
    "created": 2021-02-13T06:55:50.631Z,
    "description": "Veniam doloribus ducimus reiciendis neque sit deserunt dolorum modi minima. Praesentium excepturi amet odit quasi totam accusantium.",
    "id": "11754b26-8c23-4bd4-82ee-819869219c06",
    "name": "global infomediaries #6221",
    "token": "dvg28pa0ldwypstrd6nv5eig",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": true,
    "created": 2022-12-05T22:03:19.057Z,
    "description": "Dicta at nulla unde consectetur. Ab vitae laboriosam error id repudiandae iste ratione id.",
    "id": "da7ceb2c-60e4-477e-bef1-5c5735beceae",
    "name": "impactful action-items #9443",
    "token": "xdoffmc0oohp2ikg9atrknsf",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": true,
    "created": 2020-03-26T20:40:20.079Z,
    "description": "Ab quas a voluptatem nulla. Laudantium quasi odit nihil adipisci.",
    "id": "6698f1f7-787c-4f1d-b519-40bc979f2d52",
    "name": "impactful channels #7048",
    "token": "6x526m57u4oozasf0swns366",
    "user": "75dbdbb1-1c01-4a7b-9eed-b26a98f2fefd",
  },
  {
    "active": true,
    "created": 2020-03-12T20:04:50.982Z,
    "description": "Temporibus inventore sint. Sit eos molestiae autem earum praesentium.",
    "id": "23fadcc1-198b-4641-8035-92c527d0dc38",
    "name": "impactful infomediaries #7727",
    "token": "h3sx1wl408qrh03szzy30si8",
    "user": "a24f21d0-df03-45ce-bca4-8806aa97b298",
  },
  {
    "active": true,
    "created": 2021-12-07T21:28:47.421Z,
    "description": "Assumenda consequuntur aperiam. Voluptatum occaecati mollitia distinctio alias consequuntur eveniet sequi occaecati.",
    "id": "ccd3df72-04f1-4315-a447-f9c4d774e237",
    "name": "innovative content #6562",
    "token": "spk86b1fsdypeo0honoq7qmw",
    "user": "a24f21d0-df03-45ce-bca4-8806aa97b298",
  },
  {
    "active": true,
    "created": 2020-08-23T10:22:42.134Z,
    "description": "Adipisci in libero provident ducimus accusamus modi debitis mollitia temporibus. Labore illum iusto beatae vel sapiente.",
    "id": "534cc406-4256-45c8-83f9-4934dc552139",
    "name": "innovative networks #2672",
    "token": "ilyva0n7zf3vlnsequqe5156",
    "user": "a24f21d0-df03-45ce-bca4-8806aa97b298",
  },
  {
    "active": true,
    "created": 2022-11-23T10:31:12.499Z,
    "description": "Necessitatibus voluptatum dolorum quae expedita cumque aliquam quas. Neque consequatur tempore dolorum deserunt harum totam.",
    "id": "e5828779-efe1-48fd-9c5d-e252056bef2c",
    "name": "innovative relationships #1118",
    "token": "a59no5cpz8g5d979p8reptwg",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": true,
    "created": 2021-11-18T17:25:05.340Z,
    "description": "Dolorum et neque sapiente fugit nihil amet vero. Nesciunt tempora sint soluta occaecati vel.",
    "id": "7110772e-7cde-499d-9416-edf286e7ead6",
    "name": "interactive e-services #4659",
    "token": "28u2egm753pb3mj88rjouu0q",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": true,
    "created": 2021-11-08T12:03:08.051Z,
    "description": "Ipsa laboriosam ad veritatis quaerat enim adipisci nobis modi deserunt. Occaecati at in earum consectetur quae quia eveniet laboriosam autem.",
    "id": "914876d6-3115-48d4-b6f3-2bece10a9b51",
    "name": "interactive relationships #1561",
    "token": "ifoj1pj4ub1oug82x02277wq",
    "user": "75dbdbb1-1c01-4a7b-9eed-b26a98f2fefd",
  },
  {
    "active": true,
    "created": 2020-10-07T19:15:29.466Z,
    "description": "Mollitia a labore voluptas aut animi minus facere iste. Quisquam deserunt ipsum.",
    "id": "dd98188e-dae3-4f7d-bef1-468964123181",
    "name": "killer systems #9023",
    "token": "pi1yo9v63r3lwvqoupqsqc2b",
    "user": "a24f21d0-df03-45ce-bca4-8806aa97b298",
  },
  {
    "active": true,
    "created": 2019-11-23T07:12:37.217Z,
    "description": "Fuga corrupti vero. Id eum adipisci neque veniam repudiandae qui distinctio sequi harum.",
    "id": "c37e9d30-94bd-4ca0-aac9-12fb7e0bcb73",
    "name": "leading-edge experiences #9941",
    "token": "swjww2l2kylvvsi5cpicqzko",
    "user": "75dbdbb1-1c01-4a7b-9eed-b26a98f2fefd",
  },
  {
    "active": true,
    "created": 2021-05-03T20:05:05.149Z,
    "description": "Sit ea iste reprehenderit quia exercitationem praesentium earum. Iste eveniet minima qui.",
    "id": "a11bab80-e6ed-46d5-9655-38db1229bb25",
    "name": "leading-edge schemas #2596",
    "token": "22rsicv4sh6v6lypkalrocmh",
    "user": "75dbdbb1-1c01-4a7b-9eed-b26a98f2fefd",
  },
  {
    "active": true,
    "created": 2019-10-14T06:16:16.028Z,
    "description": "Fugiat ex eaque. Iure modi voluptatibus odit dolore deserunt praesentium quia officia.",
    "id": "c7884d69-8752-49ff-a72c-a7b8c838b88c",
    "name": "next-generation e-services #2726",
    "token": "4e3h611flo811d1bcialxmxd",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": true,
    "created": 2023-03-22T03:29:36.162Z,
    "description": "Sunt voluptas neque quaerat. Dolorem incidunt laboriosam similique nihil numquam nihil ad at.",
    "id": "e67c98cb-3ccb-4c1d-b868-b74840fa23ed",
    "name": "out-of-the-box portals #1176",
    "token": "gzmo3ydu0n69g8v91g3r3opj",
    "user": "a24f21d0-df03-45ce-bca4-8806aa97b298",
  },
  {
    "active": true,
    "created": 2022-12-03T01:42:16.559Z,
    "description": "Facere officia corporis voluptas occaecati odit maxime sunt id qui. Similique soluta nemo quidem.",
    "id": "32f81843-4bbd-4a7f-b2f8-0bb076bf4e90",
    "name": "real-time schemas #5970",
    "token": "euwl0axcjqdzngpxuwxxptxo",
    "user": "a24f21d0-df03-45ce-bca4-8806aa97b298",
  },
  {
    "active": true,
    "created": 2019-09-23T17:41:46.080Z,
    "description": "Tempora debitis repudiandae repudiandae aut aspernatur rerum modi non. Nulla accusamus iste suscipit.",
    "id": "f736d5ab-94fc-4471-87bb-c5727398cfb1",
    "name": "revolutionary paradigms #2497",
    "token": "yqkhxzeqqg52ee4yov3m8v8f",
    "user": "a24f21d0-df03-45ce-bca4-8806aa97b298",
  },
  {
    "active": true,
    "created": 2020-08-07T17:19:14.785Z,
    "description": "Ab magnam necessitatibus tenetur blanditiis voluptatem. Impedit eos quam nesciunt mollitia sit optio dolores.",
    "id": "fa43b58d-c409-4490-8e70-66ff88c10c38",
    "name": "rich deliverables #3426",
    "token": "psze6bgv1snfrkrlz5e0glwj",
    "user": "a24f21d0-df03-45ce-bca4-8806aa97b298",
  },
  {
    "active": true,
    "created": 2020-10-20T22:46:18.715Z,
    "description": "Veritatis ullam laborum cum. Odit incidunt enim.",
    "id": "b9f8e034-81bb-4126-8b89-7889c0ccdc47",
    "name": "sexy e-tailers #1598",
    "token": "t6x7uwwe4ri4zreo1l9ymq4e",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": true,
    "created": 2020-01-24T16:28:30.869Z,
    "description": "Aliquid perferendis iure rerum. Eius cum tempora sit voluptas hic aperiam repudiandae impedit.",
    "id": "ecfcda29-b3f4-4c44-8ee7-acb8f987b5d3",
    "name": "sexy technologies #4091",
    "token": "9py0mvl4ga34p51fom6f5jek",
    "user": "a24f21d0-df03-45ce-bca4-8806aa97b298",
  },
  {
    "active": true,
    "created": 2019-08-08T07:30:07.808Z,
    "description": "Illum adipisci ipsam rerum consequuntur. Et maxime ipsa.",
    "id": "7a2eba88-42c1-4330-995f-bb0b8a3e0cd8",
    "name": "transparent synergies #6239",
    "token": "v1bpp8ejn6q9729z1sbps7jp",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": true,
    "created": 2022-04-11T09:30:42.922Z,
    "description": "Deserunt tempora necessitatibus. Magni aut numquam excepturi recusandae mollitia.",
    "id": "f6f886fe-4d84-4624-b90a-c67cb923e7ff",
    "name": "user-centric eyeballs #4763",
    "token": "shjofmzooua6jdnov9q3kivk",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": true,
    "created": 2022-05-28T18:24:11.671Z,
    "description": "Pariatur velit recusandae praesentium. Iusto aspernatur commodi repellat.",
    "id": "4966dd70-fa1e-41e0-a2fb-59b14b571c2c",
    "name": "viral eyeballs #2492",
    "token": "wan98ngpupfes4ysv8unr85h",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": true,
    "created": 2020-01-10T10:48:13.805Z,
    "description": "Fugit similique asperiores molestias ea magni. Consequuntur pariatur animi doloribus eaque.",
    "id": "29990302-60dd-4a8e-9430-e8a78596932a",
    "name": "visionary experiences #2364",
    "token": "dbwq6ou39a0tu4muyfc43vu4",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": true,
    "created": 2022-09-15T12:00:33.518Z,
    "description": "Quam repellendus dolor corporis quo. Saepe itaque repudiandae deleniti deleniti ipsam qui.",
    "id": "f21d5019-d981-4c90-84eb-32b7c8068304",
    "name": "visionary markets #8720",
    "token": "5f4sywlm9uwtyr15ys2ungg9",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
]
`;

exports[`Default Application Manager Search Applications Will filter results to show only applications belonging to the specified user 1`] = `
[
  {
    "active": true,
    "created": 2019-06-29T11:20:50.501Z,
    "description": "Praesentium atque aliquam quas. Aliquam non enim temporibus distinctio aspernatur.",
    "id": "dbae82a8-3040-413e-8588-e0cb3ccc435c",
    "name": "back-end models #6381",
    "token": "ue4u82iklbhgi3mz7na4xnh8",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": false,
    "created": 2019-10-09T05:10:54.822Z,
    "description": "Assumenda quam quisquam ad voluptates laborum. Dolorum quasi unde voluptatum non necessitatibus.",
    "id": "7e526cd1-0ec9-420b-b35c-dc15d09ab9e9",
    "name": "cross-media networks #5258",
    "token": "3ztfp2ewbzhwucldabx61c76",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": false,
    "created": 2020-08-30T00:27:10.036Z,
    "description": "Similique ullam nam quae. Magni repudiandae veritatis expedita quo cum esse.",
    "id": "a0a29710-1114-4332-aa0f-545e1fcd7af9",
    "name": "distributed systems #1493",
    "token": "9deqh6wwqtmpggka1n3qd5oj",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": true,
    "created": 2022-04-09T22:53:42.863Z,
    "description": "Voluptatum corporis totam quos ipsum ducimus eligendi consequuntur facilis. Eius rem similique nihil corrupti.",
    "id": "ea17f836-1211-4e8e-b625-2c95771cf60a",
    "name": "frictionless metrics #3423",
    "token": "ijcuucb7a7k06c7onvvu9dt2",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": true,
    "created": 2019-05-01T13:33:18.142Z,
    "description": "Consequatur sed optio id fugit odio omnis vel. Sed dolor ad.",
    "id": "0cde3c32-637b-45c6-a5de-753f6edaa6a7",
    "name": "front-end e-services #6105",
    "token": "zmsceb13fkfxx7cr0k6yqkme",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": true,
    "created": 2021-02-13T06:55:50.631Z,
    "description": "Veniam doloribus ducimus reiciendis neque sit deserunt dolorum modi minima. Praesentium excepturi amet odit quasi totam accusantium.",
    "id": "11754b26-8c23-4bd4-82ee-819869219c06",
    "name": "global infomediaries #6221",
    "token": "dvg28pa0ldwypstrd6nv5eig",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": true,
    "created": 2022-12-05T22:03:19.057Z,
    "description": "Dicta at nulla unde consectetur. Ab vitae laboriosam error id repudiandae iste ratione id.",
    "id": "da7ceb2c-60e4-477e-bef1-5c5735beceae",
    "name": "impactful action-items #9443",
    "token": "xdoffmc0oohp2ikg9atrknsf",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": true,
    "created": 2022-11-23T10:31:12.499Z,
    "description": "Necessitatibus voluptatum dolorum quae expedita cumque aliquam quas. Neque consequatur tempore dolorum deserunt harum totam.",
    "id": "e5828779-efe1-48fd-9c5d-e252056bef2c",
    "name": "innovative relationships #1118",
    "token": "a59no5cpz8g5d979p8reptwg",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": true,
    "created": 2021-11-18T17:25:05.340Z,
    "description": "Dolorum et neque sapiente fugit nihil amet vero. Nesciunt tempora sint soluta occaecati vel.",
    "id": "7110772e-7cde-499d-9416-edf286e7ead6",
    "name": "interactive e-services #4659",
    "token": "28u2egm753pb3mj88rjouu0q",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": true,
    "created": 2019-10-14T06:16:16.028Z,
    "description": "Fugiat ex eaque. Iure modi voluptatibus odit dolore deserunt praesentium quia officia.",
    "id": "c7884d69-8752-49ff-a72c-a7b8c838b88c",
    "name": "next-generation e-services #2726",
    "token": "4e3h611flo811d1bcialxmxd",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": false,
    "created": 2023-02-26T05:57:57.994Z,
    "description": "Quam sit accusamus. Nam similique tenetur corrupti voluptatum quibusdam dignissimos incidunt.",
    "id": "5d61371a-cd16-4891-a8e6-60a5171ae365",
    "name": "sexy communities #7434",
    "token": "wu9tyk682mum5cmak9h27pby",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": true,
    "created": 2020-10-20T22:46:18.715Z,
    "description": "Veritatis ullam laborum cum. Odit incidunt enim.",
    "id": "b9f8e034-81bb-4126-8b89-7889c0ccdc47",
    "name": "sexy e-tailers #1598",
    "token": "t6x7uwwe4ri4zreo1l9ymq4e",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": true,
    "created": 2019-08-08T07:30:07.808Z,
    "description": "Illum adipisci ipsam rerum consequuntur. Et maxime ipsa.",
    "id": "7a2eba88-42c1-4330-995f-bb0b8a3e0cd8",
    "name": "transparent synergies #6239",
    "token": "v1bpp8ejn6q9729z1sbps7jp",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": true,
    "created": 2022-04-11T09:30:42.922Z,
    "description": "Deserunt tempora necessitatibus. Magni aut numquam excepturi recusandae mollitia.",
    "id": "f6f886fe-4d84-4624-b90a-c67cb923e7ff",
    "name": "user-centric eyeballs #4763",
    "token": "shjofmzooua6jdnov9q3kivk",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": false,
    "created": 2020-02-03T08:37:43.487Z,
    "description": "Accusantium autem doloribus et delectus molestias. Blanditiis quia dignissimos dolorum laboriosam nesciunt alias.",
    "id": "892eca08-f4b1-4f9e-9ad6-24a7a2eb22f0",
    "name": "value-added content #4125",
    "token": "h25wymy4olosyctetj6tuvv7",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": false,
    "created": 2019-11-07T09:07:28.847Z,
    "description": "Rerum omnis excepturi autem in. Aliquam saepe iste consequatur libero maxime consequuntur reiciendis aut eos.",
    "id": "c50986b0-b9c1-457a-a730-94ad4f8666e3",
    "name": "vertical functionalities #5993",
    "token": "hor50f0g8tct0zayylrx7olo",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": true,
    "created": 2022-05-28T18:24:11.671Z,
    "description": "Pariatur velit recusandae praesentium. Iusto aspernatur commodi repellat.",
    "id": "4966dd70-fa1e-41e0-a2fb-59b14b571c2c",
    "name": "viral eyeballs #2492",
    "token": "wan98ngpupfes4ysv8unr85h",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": true,
    "created": 2020-01-10T10:48:13.805Z,
    "description": "Fugit similique asperiores molestias ea magni. Consequuntur pariatur animi doloribus eaque.",
    "id": "29990302-60dd-4a8e-9430-e8a78596932a",
    "name": "visionary experiences #2364",
    "token": "dbwq6ou39a0tu4muyfc43vu4",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": true,
    "created": 2022-09-15T12:00:33.518Z,
    "description": "Quam repellendus dolor corporis quo. Saepe itaque repudiandae deleniti deleniti ipsam qui.",
    "id": "f21d5019-d981-4c90-84eb-32b7c8068304",
    "name": "visionary markets #8720",
    "token": "5f4sywlm9uwtyr15ys2ungg9",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
]
`;

exports[`Default Application Manager Search Applications Will filter results to show only inactive apps 1`] = `
[
  {
    "active": false,
    "created": 2020-09-03T19:26:29.009Z,
    "description": "Mollitia eius voluptatem est corrupti mollitia explicabo. Ex reprehenderit et saepe.",
    "id": "8f444637-df1d-424f-8724-08ec3762afeb",
    "name": "cross-media infrastructures #1067",
    "token": "m7va1pasobn9dm87dgyt5861",
    "user": "75dbdbb1-1c01-4a7b-9eed-b26a98f2fefd",
  },
  {
    "active": false,
    "created": 2019-10-09T05:10:54.822Z,
    "description": "Assumenda quam quisquam ad voluptates laborum. Dolorum quasi unde voluptatum non necessitatibus.",
    "id": "7e526cd1-0ec9-420b-b35c-dc15d09ab9e9",
    "name": "cross-media networks #5258",
    "token": "3ztfp2ewbzhwucldabx61c76",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": false,
    "created": 2020-09-23T09:07:45.533Z,
    "description": "In esse porro dolor totam. Fuga repudiandae eos praesentium.",
    "id": "100025bd-bb98-4199-b4c0-b13a3044ff32",
    "name": "customized convergence #9785",
    "token": "d319zgf2035e8agq00xxskgq",
    "user": "a24f21d0-df03-45ce-bca4-8806aa97b298",
  },
  {
    "active": false,
    "created": 2022-01-20T01:01:04.327Z,
    "description": "Asperiores vitae recusandae ab perferendis amet perferendis nihil dolor nisi. Non quia pariatur.",
    "id": "468be59f-5fb7-49a0-92e1-550fc414d0e2",
    "name": "cutting-edge technologies #6544",
    "token": "8hrhx2fhb4nb2830d1ji5ct7",
    "user": "a24f21d0-df03-45ce-bca4-8806aa97b298",
  },
  {
    "active": false,
    "created": 2020-08-30T00:27:10.036Z,
    "description": "Similique ullam nam quae. Magni repudiandae veritatis expedita quo cum esse.",
    "id": "a0a29710-1114-4332-aa0f-545e1fcd7af9",
    "name": "distributed systems #1493",
    "token": "9deqh6wwqtmpggka1n3qd5oj",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": false,
    "created": 2020-05-18T10:25:47.345Z,
    "description": "Iusto eligendi quisquam ratione sapiente corporis praesentium natus iure. Fuga quis beatae ex saepe quia.",
    "id": "8b48e13b-350b-4817-bc6e-5bc44cc1cca1",
    "name": "e-business eyeballs #3161",
    "token": "ijqpydpwt1oj10iwz49la8r3",
    "user": "75dbdbb1-1c01-4a7b-9eed-b26a98f2fefd",
  },
  {
    "active": false,
    "created": 2021-03-22T23:21:16.623Z,
    "description": "Beatae eaque ducimus ad quibusdam. Nemo expedita impedit explicabo commodi excepturi.",
    "id": "779c3980-bad7-4319-b1dc-4a4bb2df4970",
    "name": "innovative e-markets #8836",
    "token": "8sdx3wvtt4j3pfqnbn1100qk",
    "user": "a24f21d0-df03-45ce-bca4-8806aa97b298",
  },
  {
    "active": false,
    "created": 2020-10-25T07:36:32.862Z,
    "description": "Veritatis veritatis praesentium veritatis eveniet quisquam. Ipsum dolorum architecto iste repudiandae doloribus reiciendis est reiciendis quos.",
    "id": "cb70d211-7eab-440e-a16f-87cbcda11812",
    "name": "next-generation platforms #8446",
    "token": "q1ttjrzdxcrkikpgzmyjxcfj",
    "user": "75dbdbb1-1c01-4a7b-9eed-b26a98f2fefd",
  },
  {
    "active": false,
    "created": 2020-08-31T01:41:06.712Z,
    "description": "Odit quisquam velit quas nihil dolor sunt omnis excepturi. Enim porro ad vitae assumenda id ut.",
    "id": "29cbe3be-152a-46a0-bdee-b415e0424227",
    "name": "robust communities #7466",
    "token": "acjiodrlvw96oz9daatp6188",
    "user": "a24f21d0-df03-45ce-bca4-8806aa97b298",
  },
  {
    "active": false,
    "created": 2019-05-29T20:58:40.389Z,
    "description": "Impedit eligendi ullam fuga saepe quasi quam. Earum temporibus amet atque voluptatem assumenda.",
    "id": "01bf81cc-ef64-4117-a1c0-87923553b47a",
    "name": "seamless niches #9686",
    "token": "3ynuyeexgofpra63mhwms246",
    "user": "75dbdbb1-1c01-4a7b-9eed-b26a98f2fefd",
  },
  {
    "active": false,
    "created": 2023-02-26T05:57:57.994Z,
    "description": "Quam sit accusamus. Nam similique tenetur corrupti voluptatum quibusdam dignissimos incidunt.",
    "id": "5d61371a-cd16-4891-a8e6-60a5171ae365",
    "name": "sexy communities #7434",
    "token": "wu9tyk682mum5cmak9h27pby",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": false,
    "created": 2020-06-12T11:05:29.559Z,
    "description": "Rerum neque occaecati consequatur natus reiciendis. Suscipit at tempora.",
    "id": "a77cf2be-da98-4294-b038-bbb90a81935f",
    "name": "transparent platforms #8130",
    "token": "5f3zv14irojp5no9l831lt49",
    "user": "75dbdbb1-1c01-4a7b-9eed-b26a98f2fefd",
  },
  {
    "active": false,
    "created": 2021-02-27T22:01:17.396Z,
    "description": "Rem vero qui ipsa possimus rem a doloribus placeat minima. Quos nesciunt recusandae quidem modi error debitis atque esse.",
    "id": "b3b4c62c-c717-4305-874f-f6b9546774cf",
    "name": "turn-key eyeballs #9306",
    "token": "u9m8dvhcj902xv45pbz6d5ab",
    "user": "75dbdbb1-1c01-4a7b-9eed-b26a98f2fefd",
  },
  {
    "active": false,
    "created": 2021-12-08T14:48:25.088Z,
    "description": "Cupiditate consequatur possimus. Explicabo distinctio sapiente expedita voluptatibus rerum officia recusandae esse adipisci.",
    "id": "d5087b1f-ffa0-48c2-b8c4-bac4b0667210",
    "name": "turn-key paradigms #5373",
    "token": "t0bhy8qkg3dz6ex9x4klk5ja",
    "user": "75dbdbb1-1c01-4a7b-9eed-b26a98f2fefd",
  },
  {
    "active": false,
    "created": 2020-02-03T08:37:43.487Z,
    "description": "Accusantium autem doloribus et delectus molestias. Blanditiis quia dignissimos dolorum laboriosam nesciunt alias.",
    "id": "892eca08-f4b1-4f9e-9ad6-24a7a2eb22f0",
    "name": "value-added content #4125",
    "token": "h25wymy4olosyctetj6tuvv7",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": false,
    "created": 2019-11-07T09:07:28.847Z,
    "description": "Rerum omnis excepturi autem in. Aliquam saepe iste consequatur libero maxime consequuntur reiciendis aut eos.",
    "id": "c50986b0-b9c1-457a-a730-94ad4f8666e3",
    "name": "vertical functionalities #5993",
    "token": "hor50f0g8tct0zayylrx7olo",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": false,
    "created": 2019-09-21T20:00:37.401Z,
    "description": "Modi maxime autem itaque quaerat tempore accusamus nulla quo libero. Error eum cupiditate temporibus aperiam alias magni neque cumque.",
    "id": "487c58b8-3c0f-48b1-99b0-5e2b21288474",
    "name": "viral networks #2318",
    "token": "72zg2adnqg1ellp7wq3o64jo",
    "user": "75dbdbb1-1c01-4a7b-9eed-b26a98f2fefd",
  },
  {
    "active": false,
    "created": 2021-11-21T00:18:27.348Z,
    "description": "Sequi illo deleniti impedit quia totam consequuntur aliquid explicabo. Alias soluta aspernatur nihil.",
    "id": "300e4674-a3ca-48fa-92b1-0b438a09b518",
    "name": "visionary solutions #2589",
    "token": "w1bvhkcr89vfvaoz4o0jh5bi",
    "user": "75dbdbb1-1c01-4a7b-9eed-b26a98f2fefd",
  },
]
`;

exports[`Default Application Manager Search Applications Will perform a text search 1`] = `
[
  {
    "active": true,
    "created": 2021-12-07T21:28:47.421Z,
    "description": "Assumenda consequuntur aperiam. Voluptatum occaecati mollitia distinctio alias consequuntur eveniet sequi occaecati.",
    "id": "ccd3df72-04f1-4315-a447-f9c4d774e237",
    "name": "innovative content #6562",
    "token": "spk86b1fsdypeo0honoq7qmw",
    "user": "a24f21d0-df03-45ce-bca4-8806aa97b298",
  },
  {
    "active": false,
    "created": 2021-03-22T23:21:16.623Z,
    "description": "Beatae eaque ducimus ad quibusdam. Nemo expedita impedit explicabo commodi excepturi.",
    "id": "779c3980-bad7-4319-b1dc-4a4bb2df4970",
    "name": "innovative e-markets #8836",
    "token": "8sdx3wvtt4j3pfqnbn1100qk",
    "user": "a24f21d0-df03-45ce-bca4-8806aa97b298",
  },
  {
    "active": true,
    "created": 2020-08-23T10:22:42.134Z,
    "description": "Adipisci in libero provident ducimus accusamus modi debitis mollitia temporibus. Labore illum iusto beatae vel sapiente.",
    "id": "534cc406-4256-45c8-83f9-4934dc552139",
    "name": "innovative networks #2672",
    "token": "ilyva0n7zf3vlnsequqe5156",
    "user": "a24f21d0-df03-45ce-bca4-8806aa97b298",
  },
  {
    "active": true,
    "created": 2022-11-23T10:31:12.499Z,
    "description": "Necessitatibus voluptatum dolorum quae expedita cumque aliquam quas. Neque consequatur tempore dolorum deserunt harum totam.",
    "id": "e5828779-efe1-48fd-9c5d-e252056bef2c",
    "name": "innovative relationships #1118",
    "token": "a59no5cpz8g5d979p8reptwg",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
]
`;

exports[`Default Application Manager Search Applications Will return a number of results matching "limit" 1`] = `
[
  {
    "active": true,
    "created": 2019-06-29T11:20:50.501Z,
    "description": "Praesentium atque aliquam quas. Aliquam non enim temporibus distinctio aspernatur.",
    "id": "dbae82a8-3040-413e-8588-e0cb3ccc435c",
    "name": "back-end models #6381",
    "token": "ue4u82iklbhgi3mz7na4xnh8",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": true,
    "created": 2019-09-07T22:22:18.227Z,
    "description": "Occaecati itaque qui in incidunt aspernatur consequuntur maiores. Ipsam mollitia consequuntur nemo.",
    "id": "8a14ae68-aaab-4cc1-acdb-8eaee0e7cff1",
    "name": "bleeding-edge convergence #8595",
    "token": "oqnjwbybdrks0fbz2znximf0",
    "user": "75dbdbb1-1c01-4a7b-9eed-b26a98f2fefd",
  },
  {
    "active": true,
    "created": 2020-06-26T05:08:50.608Z,
    "description": "Accusantium doloribus esse accusantium expedita hic amet perspiciatis. Et nesciunt inventore.",
    "id": "ff083560-2f0b-4082-9d8c-8854ce927900",
    "name": "compelling channels #6717",
    "token": "z9i21i4av80ocudakqb2lsmz",
    "user": "a24f21d0-df03-45ce-bca4-8806aa97b298",
  },
  {
    "active": true,
    "created": 2021-10-16T04:56:04.184Z,
    "description": "Dolorum provident iste suscipit magnam ipsum quam dolore quod consequatur. Fuga aliquid saepe.",
    "id": "1f7d9034-139d-4c6c-a5d9-0243fcbf5c81",
    "name": "compelling networks #7601",
    "token": "4hhah20ocso9gdts5qupv3du",
    "user": "75dbdbb1-1c01-4a7b-9eed-b26a98f2fefd",
  },
  {
    "active": false,
    "created": 2020-09-03T19:26:29.009Z,
    "description": "Mollitia eius voluptatem est corrupti mollitia explicabo. Ex reprehenderit et saepe.",
    "id": "8f444637-df1d-424f-8724-08ec3762afeb",
    "name": "cross-media infrastructures #1067",
    "token": "m7va1pasobn9dm87dgyt5861",
    "user": "75dbdbb1-1c01-4a7b-9eed-b26a98f2fefd",
  },
]
`;

exports[`Default Application Manager Search Applications Will skip over records to return other pages of data 1`] = `
[
  {
    "active": false,
    "created": 2020-05-18T10:25:47.345Z,
    "description": "Iusto eligendi quisquam ratione sapiente corporis praesentium natus iure. Fuga quis beatae ex saepe quia.",
    "id": "8b48e13b-350b-4817-bc6e-5bc44cc1cca1",
    "name": "e-business eyeballs #3161",
    "token": "ijqpydpwt1oj10iwz49la8r3",
    "user": "75dbdbb1-1c01-4a7b-9eed-b26a98f2fefd",
  },
  {
    "active": true,
    "created": 2020-10-17T09:28:52.339Z,
    "description": "Illo placeat cum. Harum voluptates incidunt veritatis maxime labore in temporibus.",
    "id": "20fb2c19-e253-4ee0-8698-a117e9a00add",
    "name": "frictionless blockchains #2140",
    "token": "33pro5o4xc6g1f6gx0qp1jl2",
    "user": "a24f21d0-df03-45ce-bca4-8806aa97b298",
  },
  {
    "active": true,
    "created": 2022-04-09T22:53:42.863Z,
    "description": "Voluptatum corporis totam quos ipsum ducimus eligendi consequuntur facilis. Eius rem similique nihil corrupti.",
    "id": "ea17f836-1211-4e8e-b625-2c95771cf60a",
    "name": "frictionless metrics #3423",
    "token": "ijcuucb7a7k06c7onvvu9dt2",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": true,
    "created": 2019-05-01T13:33:18.142Z,
    "description": "Consequatur sed optio id fugit odio omnis vel. Sed dolor ad.",
    "id": "0cde3c32-637b-45c6-a5de-753f6edaa6a7",
    "name": "front-end e-services #6105",
    "token": "zmsceb13fkfxx7cr0k6yqkme",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": true,
    "created": 2021-02-13T06:55:50.631Z,
    "description": "Veniam doloribus ducimus reiciendis neque sit deserunt dolorum modi minima. Praesentium excepturi amet odit quasi totam accusantium.",
    "id": "11754b26-8c23-4bd4-82ee-819869219c06",
    "name": "global infomediaries #6221",
    "token": "dvg28pa0ldwypstrd6nv5eig",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": true,
    "created": 2022-12-05T22:03:19.057Z,
    "description": "Dicta at nulla unde consectetur. Ab vitae laboriosam error id repudiandae iste ratione id.",
    "id": "da7ceb2c-60e4-477e-bef1-5c5735beceae",
    "name": "impactful action-items #9443",
    "token": "xdoffmc0oohp2ikg9atrknsf",
    "user": "41b96961-a8d5-4c6b-8199-cc57a61235ae",
  },
  {
    "active": true,
    "created": 2020-03-26T20:40:20.079Z,
    "description": "Ab quas a voluptatem nulla. Laudantium quasi odit nihil adipisci.",
    "id": "6698f1f7-787c-4f1d-b519-40bc979f2d52",
    "name": "impactful channels #7048",
    "token": "6x526m57u4oozasf0swns366",
    "user": "75dbdbb1-1c01-4a7b-9eed-b26a98f2fefd",
  },
  {
    "active": true,
    "created": 2020-03-12T20:04:50.982Z,
    "description": "Temporibus inventore sint. Sit eos molestiae autem earum praesentium.",
    "id": "23fadcc1-198b-4641-8035-92c527d0dc38",
    "name": "impactful infomediaries #7727",
    "token": "h3sx1wl408qrh03szzy30si8",
    "user": "a24f21d0-df03-45ce-bca4-8806aa97b298",
  },
  {
    "active": true,
    "created": 2021-12-07T21:28:47.421Z,
    "description": "Assumenda consequuntur aperiam. Voluptatum occaecati mollitia distinctio alias consequuntur eveniet sequi occaecati.",
    "id": "ccd3df72-04f1-4315-a447-f9c4d774e237",
    "name": "innovative content #6562",
    "token": "spk86b1fsdypeo0honoq7qmw",
    "user": "a24f21d0-df03-45ce-bca4-8806aa97b298",
  },
  {
    "active": false,
    "created": 2021-03-22T23:21:16.623Z,
    "description": "Beatae eaque ducimus ad quibusdam. Nemo expedita impedit explicabo commodi excepturi.",
    "id": "779c3980-bad7-4319-b1dc-4a4bb2df4970",
    "name": "innovative e-markets #8836",
    "token": "8sdx3wvtt4j3pfqnbn1100qk",
    "user": "a24f21d0-df03-45ce-bca4-8806aa97b298",
  },
]
`;
